--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
-#File AUTHORS lists all the contributors to the project
+# This file lists all individuals having contributed content to the repository.
 
-Olagbaju Olalekan <olagbajuisreal11@gmail.com>
+RHODA OMOTOSHO AANUOLUWAPO
+OKONGWU ONYINYE 
